--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Buildings\FishingPier.cs" />
+    <Compile Include="Assets\Scripts\Buildings\Sawmill.cs" />
     <Compile Include="Assets\Scripts\CameraMov\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\CameraMov\SceneMovement.cs" />
     <Compile Include="Assets\Scripts\CharacterCreator.cs" />
