--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\Mapa\Point.cs" />
     <Compile Include="Assets\Scripts\Mapa\TileScript.cs" />
     <Compile Include="Assets\Scripts\MusicPlayer.cs" />
+    <Compile Include="Assets\Scripts\PauzaMenu.cs" />
     <Compile Include="Assets\Scripts\SelectionManager.cs" />
     <Compile Include="Assets\Scripts\Singleton.cs" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
