Budynki w fazie alpha
Podstawowe funkcje działają, jest parę rzeczy do zrobienia.

//Dla benia
Warsztat/kuźnia na razie nic nie robią oprócz ustawienia pracownika, że pracuje.
Warsztat/kuźnia/kuchnia po skończeniu pracy trzeba ustawić wartość czyPracuje danego pracownika na false.
Dla ludzi robiących skrypty do UI będą musieli sprawdzić if’em czy budynek ma dany tier(chodzi mi o budowanie żeby ciągle się nie robiło { Plus niektóre skrypty są robione na switch’u i nie maja oddzielnych metod do budowy i ulepszenia.}).
Nie ma jeszcze funkcji sprzedaży budynków.

//Naprawione
Usuwanie kamienia zamiast żelaza.
Sawmill pracownik kończy prace jak zabraknie staminy.
Zmienione wartości na poprawne.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,9 +64,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Buildings\Campfire.cs" />
+    <Compile Include="Assets\Scripts\Buildings\Den.cs" />
     <Compile Include="Assets\Scripts\Buildings\FishingPier.cs" />
+    <Compile Include="Assets\Scripts\Buildings\Garden.cs" />
     <Compile Include="Assets\Scripts\Buildings\Sawmill.cs" />
     <Compile Include="Assets\Scripts\Buildings\Warehouse.cs" />
+    <Compile Include="Assets\Scripts\Buildings\WaterCollector.cs" />
+    <Compile Include="Assets\Scripts\Buildings\Workshop.cs" />
     <Compile Include="Assets\Scripts\CameraMov\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\CameraMov\SceneMovement.cs" />
     <Compile Include="Assets\Scripts\CharacterCreator.cs" />
